--- a/notebook/paraphraser_playground.ipynb
+++ b/notebook/paraphraser_playground.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/robin/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "/home/robin/env/paraphrase/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -27,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,18 +46,20 @@
      "output_type": "stream",
      "text": [
       "available models with parot  ['Vamsi/T5_Paraphrase_Paws', 'umarin/chatgpt_paraphraser_on_T5_base', 'prithivida/parrot_paraphraser_on_T5', 'stanford-oval/paraphraser-bart-large']\n",
-      "available models with Quality control method  ['ibm/qcpg-sentences', 'ibm/qcpg-captions', 'ibm/qcpg-questions']\n"
+      "available models with Quality control method  ['ibm/qcpg-sentences', 'ibm/qcpg-captions', 'ibm/qcpg-questions']\n",
+      "available models with Open AI method  ['gpt-3.5-turbo', 'text-davinci-002']\n"
      ]
     }
    ],
    "source": [
     "print(\"available models with parot \", config['paraphrase_dataset']['paraphrase_models'])\n",
-    "print(\"available models with Quality control method \", config['paraphrase_dataset']['quality_control_models'])"
+    "print(\"available models with Quality control method \", config['paraphrase_dataset']['quality_control_models'])\n",
+    "print(\"available models with Open AI method \", config['paraphrase_dataset']['open_ai_models'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +106,44 @@
     "## generate paraphrase\n",
     "\n",
     "generator = ParaphraseGenerator(model_name=model_name, quality_control_kwargs=quality_control_kwargs)\n",
+    "\n",
+    "paraphrase = generator.paraphrase(text)\n",
+    "\n",
+    "print(f\"original text: {text}\")\n",
+    "print(f\"paraphrase: {paraphrase}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## test OPEN AI models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original text: The quick brown fox jumps over the lazy dog.\n",
+      "paraphrase: The fox jumps over the dog.\n"
+     ]
+    }
+   ],
+   "source": [
+    "openai_kwargs = {\n",
+    "            \"max_tokens\": 200,\n",
+    "            \"temperature\": 0.9,\n",
+    "        }\n",
+    "model_name = 'text-davinci-002'\n",
+    "\n",
+    "## generate paraphrase\n",
+    "\n",
+    "generator = ParaphraseGenerator(model_name=model_name, openai_kwargs=openai_kwargs)\n",
     "\n",
     "paraphrase = generator.paraphrase(text)\n",
     "\n",
